--- a/style.css
+++ b/style.css
@@ -1,34 +1,53 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+* {
     margin: 0;
     padding: 0;
     background-color: black;
 }
 
-.text{
+.text {
     display: flex;
     justify-content: center;
     color: white;
-    font-size: 30px;
     margin: 45px;
     margin-top: 10%;
+    font-family: 'Raleway', sans-serif;
+    font-size: 32px;
+    text-decoration: none;
 }
-.profiles h3{
-    color: white;
+
+.profiles h3 {
+    color: rgba(255, 255, 255, 0.39);
     align-items: center;
     justify-content: center;
     display: flex;
 }
 
-.profiles img{
-    height: 200px;
-    width: 200px;
-}
-.profile {
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
+.profiles img {
+    height: 125px;
+    width: 125px;
+    border-radius: 4px;
 }
 
-.profiles img:hover{
-    border-radius: 50%;
+.profile {
+    display: flex;
+    justify-content: center;
+}
+.profiles{
+    margin: 15px;
+    margin-top: -15px;
+}
+
+.profiles img:hover {
+
+    border: 1px solid white;
+}
+.perfis h2{
+    height: 45px;
+    justify-content: center;
+    display: flex;
+    border: 1px solid white;
+    margin-top: 70px;
+    text-align: center;
+    color: white;
 }
